--- a/style.css
+++ b/style.css
@@ -1,5 +1,15 @@
+#container {
+    display: flex;
+    flex-direction: column;
+}
+
+.row {
+    display: flex;
+    justify-content: center;
+}
+
+
 .square {
-    background-color: pink;
     border: solid;
     width: 50px;
     height: 50px;
