--- a/style.css
+++ b/style.css
@@ -1,17 +1,46 @@
+body {
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    align-items: center;
+    background-color: rgb(255, 226, 226);
+}
+h1 {
+    color: rgb(255, 158, 174);;
+}
+
+#changeSize {
+    text-align: center;
+    margin: 20px;
+    font-size: 25px;
+    background-color: rgb(255, 158, 174);
+    border-radius: 20px;
+    color: rgb(255, 226, 226);
+    border: 0cap;
+    padding: 10px;;
+}
+
+
 #container {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    height: 960px;
+    width: 960px;
 }
 
 .row {
     display: flex;
     justify-content: center;
+    flex: 1 1 auto;
+
 }
 
 
 .square {
     border: solid;
-    width: 50px;
-    height: 50px;
+    border-width: 0.1px;
+    border-color: rgb(255, 158, 174);
+    flex: 1 1 auto;
+
 }
